# ist-mi-avt7

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/html/: _a_material_8h.html  _a_material_8h__dep__incl.dot  _a_material_8h__dep__incl.md5  _a_material_8h_source.html  _a_v_tmath_lib_8cpp.html  _a_v_tmath_lib_8cpp__incl.dot  _a_v_tmath_lib_8cpp__incl.md5  _a_v_tmath_lib_8h.html  _a_v_tmath_lib_8h__dep__incl.dot  _a_v_tmath_lib_8h__dep__incl.md5  _a_v_tmath_lib_8h__incl.dot  _a_v_tmath_lib_8h__incl.md5  _a_v_tmath_lib_8h_source.html  _bounding_box_8h.html  _bounding_box_8h__dep__incl.dot  _bounding_box_8h__dep__incl.md5  _bounding_box_8h__incl.dot  _bounding_box_8h__incl.md5  _bounding_box_8h_source.html  _bus_8h.html  _bus_8h__dep__incl.dot  _bus_8h__dep__incl.md5  _bus_8h__incl.dot  _bus_8h__incl.md5  _bus_8h_source.html  _camera_8h.html  _camera_8h__dep__incl.dot  _camera_8h__dep__incl.md5  _camera_8h__incl.dot  _camera_8h__incl.md5  _camera_8h_source.html  _camera_orthogonal_8h.html  _camera_orthogonal_8h__dep__incl.dot  _camera_orthogonal_8h__dep__incl.md5  _camera_orthogonal_8h__incl.dot  _camera_orthogonal_8h__incl.md5  (+427 more)
misc/: coordinates.cpp
src/: AVTmathLib.h  Anno_16x16_2.tga  BoundingBox.cpp  BoundingBox.h  Camera.h  CameraOrthogonal.h  CameraPerspective.h  CameraPerspectiveMoving.h  CollidableGameObject.h  CustomMaterial.h  DynamicGameObject.h  GameManager.h  GameObject.h  PerspectiveCamera.h  ShaderIndices.h  Vector3.h  VertexAttrDef.h  basic_geometry.cpp  basic_geometry.h  flare.h  main.cpp
threejs/: image.src  index.html  main.js
(+553 files in other folders)
